# stm32-midi

./: .gitignore  CHANGELOG.md  INSTALLATION.md  README.md  TESTING_INSTRUCTIONS.md
.github/workflows/: ci.yml
docs/: hardware-test-checklist.md  hardware.md
firmware/: CMakeLists.txt  README.md
firmware/cmake/: stm32f103c8-toolchain.cmake
firmware/include/: hardware_config.h  keyboard.h  midi_packet.h  usb_midi.h
firmware/src/: keyboard.c  main.c  midi_packet.c  usb_midi.c
firmware/tests/: test_keyboard_debounce.c  test_midi_packets.c
